     for metadata export (as set in the Preferences).
   - GIMP Protocol version incremented.
   - New gimp_get_pdb_status() to return the status of the last PDB
     call. This is needed for plug-ins which depends on other plug-in's
     procedures. If for instance, a second-level plug-in is interrupted
     interactively, we don't want to process this as an error but as a
     cancellation.
   - New gimp_print_stack_trace() and gimp_on_error_query() for debug.

GUI and Usability:

  - New icons: "gimp-color-space-linear", "gimp-color-space-perceptual",
    "gimp-tool-color-temperature", "gimp-tool-exposure",
    "gimp-tool-shadows-highlights".
  - Switching between linear and perceptual (gamma-corrected) spaces
    in the Histogram dialog is easier now: two buttons instead of one
    two-way button where current state was difficult to understand.
  - Shorten color channel labels in the color frame (color picker tool,
    sample point editor…) with conventional 1 or 2-letter abbreviations,
    and split coordinates on 2 lines.
  - We now switch to "Huge" icons by default when the display pixel
    density is over 250 PPI (used to be 300 PPI).

Configurability:

  - Wilber logo in the toolbox can now be disabled via Preferences
    (the Toolbox page).

Tools:

  - "Link brush size with canvas zoom" paint option becomes "Lock brush
    to view" to make a brush invariant in display space whichever
    scaling, rotation, and reflection.
  - Blend tool now displays the line length (in current shell unit and
    with ideal digit accuracy) and angle in the status bar.
  - Constrain line angles in display space: all tools which have a line
    constraint feature (for instance blend tool, paint tools in line
    mode, etc.) will now do so relatively to the display, allowing you
    to rotate the canvas in order to constrain to any arbitrary angle.
  - Levels and Curves can now work on linear light data, the toggles are