@@ -110,7 +110,6 @@ EXPORTS
 	gimp_micro_version
 	gimp_minor_version
 	gimp_offset_type_get_type
-	gimp_on_error_query
 	gimp_orientation_type_get_type
 	gimp_paint_application_mode_get_type
 	gimp_param_memsize_get_type
@@ -150,7 +149,6 @@ EXPORTS
 	gimp_plug_in_directory
 	gimp_plug_in_directory_file
 	gimp_precision_get_type
-	gimp_print_stack_trace
 	gimp_progress_command_get_type
 	gimp_rectangle_intersect
 	gimp_rectangle_union
@@ -160,7 +158,10 @@ EXPORTS
 	gimp_select_criterion_get_type
 	gimp_signal_private
 	gimp_size_type_get_type
+	gimp_stack_trace_available
 	gimp_stack_trace_mode_get_type
+	gimp_stack_trace_print
+	gimp_stack_trace_query
 	gimp_strip_uline
 	gimp_stroke_method_get_type
 	gimp_sysconf_directory
